crates/ink/tests/ui/trait_def/fail/definition_rust_method.stderr
error: missing #[ink(message)] or #[ink(constructor)] flags on ink! trait method
 --> tests/ui/trait_def/fail/definition_rust_method.rs:3:5
  |
3 |     fn rust_method(&self);
  |     ^^^^^^^^^^^^^^^^^^^^^^
